# api-client-pydantic

./: .editorconfig  .flake8  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release.config.js  setup.cfg
.github/: dependabot.yml  markdown.tpl
.github/templates/: commit-template.hbs  template.hbs
.github/workflows/: changelog.yml  misspell.yml  pr.yml  publish.yml  tests.yml
api_client_pydantic/: __init__.py  serializers.py
apiclient_pydantic/: __init__.py  serializers.py  utils.py
apiclient_pydantic/v1/: __init__.py  serializers.py  utils.py
tests/: conftest.py  test_seializers.py  test_serializers.py  test_serializers_v1.py
tests/integration_tests/: client.py  test_client_integration.py
tests/vcr_cassettes/: cassette.yaml  error_cassette.yaml
